--- a/src/components/postjobform/postjobform.html
+++ b/src/components/postjobform/postjobform.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Caso De Uso 5</title>
+    <title>Post Job Form</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="./casoDeUso5.component.css" rel="stylesheet">
+    <link href="./postjobform.css" rel="stylesheet">
     <script src="https://use.fontawesome.com/0aa20c309e.js"></script>
 </head>
 <body>
