--- a/src/components/postjobform/postjobform.html
+++ b/src/components/postjobform/postjobform.html
@@ -1,65 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Post Job Form</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link href="./postjobform.css" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
+    <link href="./postjobform.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/0aa20c309e.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Bolsa de Empleos "Tigre de Web"</h1>
-        <br>
-        <form>
-            <button type="submit" class="btn btn-primary float-right">Post Job</button>
-            <br><br>
-            <h4>Job Information</h4>
-            <div class="form-group">
-                <label for="categoria">Category</label>
-                <select for="categoria" class="form-control" id="categoria">
-                    <option selected disabled>Choose a category</option>
-                    <option value="designer">Designer</option>
-                    <option value="developer">Developer</option>
-                    <option value="lead">Lead Developer</option>
-                    <option value="artist">Artist</option>                    
-                    <option value="director">Director</option>
-                </select>
-            </div>
-            <div class="form-group">
-                <label for="tipo">Type</label><tab></tab>
-                <input type="text" class="form-control" placeholder="i.e.: full-time, part-time, etc." id="tipo">
-            </div>
-            <div class="form-group">
-                <label for="compania">Company</label><tab></tab>
-                <input type="text" class="form-control" placeholder="Enter company name" id="compania">
-            </div>
-            <div class="form-group">
-                <label for="logo">Logo</label>
-                <input type="file" class="form-control" id="logo">
-            </div>
-            <div class="form-group">
-                <label for="url">URL</label><tab></tab>
-                <input type="text" class="form-control" placeholder="Enter company webpage" id="url">
-            </div>
-            <div class="form-group">
-                <label for="position">Position</label><tab></tab>
-                <input type="text" class="form-control" placeholder="Enter available position" id="position">
-            </div>
-            <div class="form-group">
-                <label for="location">Location</label><tab></tab>
-                <input type="text" class="form-control" placeholder="Enter company location" id="location">
-            </div>
-            <div class="form-group">
-                <label for="desc">Description</label><tab></tab>
-                <textarea id="desc" class="form-control" placeholder="Enter job description" rows="4"></textarea>
-            </div>
-        </form>
+      <h1>Bolsa de Empleos "Tigre de Web"</h1>
+      <br />
+      <form>
+        <button type="submit" class="btn btn-primary float-right">
+          Post Job
+        </button>
+        <br /><br />
+        <h4>Job Information</h4>
+        <div class="form-group">
+          <label for="categoria">Category</label>
+          <select for="categoria" class="form-control" id="categoria">
+            <option selected disabled>Choose a category</option>
+            <option value="designer">Designer</option>
+            <option value="developer">Developer</option>
+            <option value="lead">Lead Developer</option>
+            <option value="artist">Artist</option>
+            <option value="director">Director</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label for="tipo">Type</label><tab></tab>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="i.e.: full-time, part-time, etc."
+            id="tipo"
+          />
+        </div>
+        <div class="form-group">
+          <label for="compania">Company</label><tab></tab>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter company name"
+            id="compania"
+          />
+        </div>
+        <div class="form-group">
+          <label for="logo">Logo</label>
+          <input type="file" class="form-control" id="logo" />
+        </div>
+        <div class="form-group">
+          <label for="url">URL</label><tab></tab>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter company webpage"
+            id="url"
+          />
+        </div>
+        <div class="form-group">
+          <label for="position">Position</label><tab></tab>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter available position"
+            id="position"
+          />
+        </div>
+        <div class="form-group">
+          <label for="location">Location</label><tab></tab>
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Enter company location"
+            id="location"
+          />
+        </div>
+        <div class="form-group">
+          <label for="desc">Description</label><tab></tab>
+          <textarea
+            id="desc"
+            class="form-control"
+            placeholder="Enter job description"
+            rows="4"
+          ></textarea>
+        </div>
+      </form>
     </div>
-    
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>    
-</body>
+
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+      integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
